INCLUDES = \
	$(BASE_CFLAGS) \
	$(CONGLOMERATE_CFLAGS)

noinst_LTLIBRARIES = libeggrecent.la

libeggrecent_la_LIBADD = $(CONGLOMERATE_LIBS)

libeggrecent_la_SOURCES =		\
	egg-recent.h			\
	egg-recent-item.h		\
	egg-recent-item.c		\
	egg-recent-model.c		\
	egg-recent-model.h		\
	egg-recent-view.c		\
	egg-recent-view.h		\
	egg-recent-view-uimanager.c	\
	egg-recent-view-uimanager.h	\
	egg-recent-util.c		\
	egg-recent-util.h
